// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fontStyle renders 0 1`] = `
Array [
  .c0 {
  font-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: 0;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: 0;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders function 1`] = `
Array [
  .c0 {
  font-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: has;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: hasnot;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: has;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders invalid theme path 1`] = `
Array [
  .c0 {
  font-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: invalid.path.1;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: invalid.path.1;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders negative number 1`] = `
Array [
  .c0 {
  font-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: -54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: -42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: -42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders object [breakpoints] 1`] = `
Array [
  @media screen and (min-width:November) {
  .c0 {
    font-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {
  .c0 {
    font-style: July;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: August;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: September;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-style: November;
  }
}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-style: November;
  }
}

<div
    className="c0"
  />,
  @media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:November) {

}

@media screen and (min-width:August) {

}

@media screen and (min-width:November) {
  .c0 {
    font-style: May;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: June;
  }
}

@media screen and (min-width:November) {
  .c0 {
    font-style: April;
  }
}

@media screen and (min-width:August) {
  .c0 {
    font-style: November;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders object [breakpoints] 2`] = `
Array [
  @media May {
  .c0 {
    font-style: July;
  }
}

@media April {
  .c0 {
    font-style: August;
  }
}

@media January {
  .c0 {
    font-style: September;
  }
}

@media April {
  .c0 {
    font-style: November;
  }
}

@media June {
  .c0 {
    font-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {
  .c0 {
    font-style: July;
  }
}

@media April {
  .c0 {
    font-style: August;
  }
}

@media January {
  .c0 {
    font-style: September;
  }
}

@media April {
  .c0 {
    font-style: November;
  }
}

@media June {
  .c0 {
    font-style: August;
  }
}

@media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-style: January;
  }
}

@media April {
  .c0 {
    font-style: December;
  }
}

@media January {
  .c0 {
    font-style: April;
  }
}

@media April {
  .c0 {
    font-style: May;
  }
}

@media June {
  .c0 {
    font-style: June;
  }
}

<div
    className="c0"
  />,
  @media May {

}

@media April {

}

@media January {

}

@media April {

}

@media June {

}

@media May {
  .c0 {
    font-style: January;
  }
}

@media April {
  .c0 {
    font-style: December;
  }
}

@media January {
  .c0 {
    font-style: April;
  }
}

@media April {
  .c0 {
    font-style: May;
  }
}

@media June {
  .c0 {
    font-style: June;
  }
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders postitive number 1`] = `
Array [
  .c0 {
  font-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: 54881;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: 42365;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: 42365;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders string 1`] = `
Array [
  .c0 {
  font-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: July;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: June;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: June;
}

<div
    className="c0"
  />,
]
`;

exports[`fontStyle renders valid theme path 1`] = `
Array [
  .c0 {
  font-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
  .c0 {
  font-style: DarkSlateBlue;
}

<div
    className="c0"
  />,
]
`;
